--- a/Develop/package.json
+++ b/Develop/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "webpack": "^5.45.0",
     "webpack-cli": "^4.7.2",
